--- a/consept.html
+++ b/consept.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="返信">
-    <link rel="shortcut icon" href="img/13elllogo.png">
+    <link rel="shortcut icon" href="13elllogo.png">
     <link rel="stylesheet" href="consept.css">
     <title>建築学生事務所13ell</title>
 </head>
